--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
     <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
-    <string name="status">status</string>
+    <string name="potentially_hazardous_asteroid_status_icon">Potentially hazardous asteroid status icon</string>
+    <string name="not_hazardous_asteroid_status_icon">Not hazardous asteroid status icon</string>
     <string name="help_button">help</string>
 </resources>
